--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -52,7 +52,7 @@
     "this_browser" : "this browser",
     "not_support_p1" : "Mobile Ticket is not compatible with ",
     "not_support_p2" : ", please launch Mobile Ticket in the latest version of either Chrome, Safari or Opera instead.",
-    "not_support_create_ticket" : "This service is currently not available. Please contact a staff member if you need help."
+    "not_support_create_ticket" : "Please contact a staff member if you need further help."
   },
   "dialog" : {
     "confirm" : {
