--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -110,7 +110,7 @@
     "selectedBranch": "Selected branch",
     "selectedService": "Selected service",
     "skipAndGetInLine": "Skip & get in line",
-    "phone_placeholder": "+46"
+    "phone_placeholder": "+46 XX XXX XX XX"
 
   },
   "pricacy_policy" : { 
