MOB-174: Give more attraction to phone number text and button

--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -110,7 +110,8 @@
     "selectedBranch": "Selected branch",
     "selectedService": "Selected service",
     "skipAndGetInLine": "Skip & get in line",
-    "phone_placeholder": "+46 XX XXX XX XX"
+    "phone_placeholder": "+46 XX XXX XX XX",
+    "send": "Send"
 
   },
   "pricacy_policy" : { 
