--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -35,7 +35,8 @@
     "welcomeback": "Welcome back!",
     "visitRecycledMessage": "You will be called shortly",
     "visitAppRemoved": "No Entry Point of type SW_VISITAPP on branch, cannot create or delete visit",
-    "btnOpenMeeting" : "Enter meeting"
+    "btnOpenMeeting" : "Enter meeting",
+    "loading" : "Your ticket is being loaded, this might take a moment"
   },
   "visit": {
     "notFound": "Sorry something went wrong,",
