MOB-311: add otp delete

--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -131,7 +131,7 @@
     "submit" : "Create ticket",
     "resend" : "Resend OTP",
     "getOTP" : "Get OTP",
-    "firstAdvantageByEnteringOtpPhone" : "1. One Time Password to your mobile",
+    "firstAdvantageByEnteringOtpPhone" : "1. One time password to your mobile",
     "secondAdvantageByEnteringOtpPhone" : "2. Secure ticket creating",
     "firstAdvantageByEnteringPin" : "1. Enter pin before it expires",
     "secondAdvantageByEnteringPin" : "2. Resend pin if you did not get "
