MOB-558: Add option to configure geo fencing

--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -107,7 +107,9 @@
     "phoneNumber" : "Phone number",
     "customerId" : "Customer Id",
     "editPhoneNumber" : "Edit phone number",
-    "phoneNumberError" : "Please enter vaild phone number",
+    "phoneNumberError" : "Please enter a valid phone number",
+    "customerIdError" : "Please enter a valid customer Id",
+    "customerIdMaxError" : "Only 255 characters are allowed",
     "vistInfoTitle" : "By adding phone number you get:",
     "firstAdvantageByEnteringPhone" : "1. Ticket on SMS that is safer than browser",
     "secondAdvantageByEnteringPhone" : "2. SMS notify you when it’s you or close",
@@ -122,7 +124,7 @@
     "skipAndGetInLine": "Skip this",
     "phone_placeholder": "Enter your phone number",
     "id_placeholder": "Enter customer Id",
-    "id_details": "You can enter your customer id to get more details about your service",
+    "id_details": "You can enter your customer Id to get more details about your service",
     "send": "Send information"
   },
   "pricacy_policy" : { 
