MOB:586: Add ability to make customer phone number mandotory

--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -125,7 +125,8 @@
     "phone_placeholder": "Enter your phone number",
     "id_placeholder": "Enter customer ID",
     "id_details": "Please enter your customer ID",
-    "send": "Send information"
+    "send": "Send information",
+    "phoneNumberIsMandatory": "Phone number is mandorty to continue"
   },
   "pricacy_policy" : { 
     "title" : "Privacy policy",
