--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -126,7 +126,7 @@
     "id_placeholder": "Enter customer ID",
     "id_details": "Please enter your customer ID",
     "send": "Send information",
-    "phoneNumberIsMandatory": "Phone number is mandorty to continue"
+    "phoneNumberIsMandatory": "Phone number is mandatory to continue"
   },
   "pricacy_policy" : { 
     "title" : "Privacy policy",
