MOB-634: 'Powered by Qmatic' in Mobile Ticket

--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -161,5 +161,8 @@
     "havePIN": "You already have a PIN",
     "tryAgain": "Please try again",
     "requireTID": "Tenant ID is required"
+  },
+  "footer" : {
+    "text": "Powered by"
   }
 }
