--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -27,6 +27,7 @@
     "defaultTitle": "Mobile Ticket",
     "titleYourTurn": "It's your turn!",
     "ticketReady": "{firstName} is ready to serve you at",
+    "ticketReadyWithNoName": "You are being ready to serve at",
     "titleInLine": "position",
     "btnTitleNewTicket": "Get new ticket",
     "ticketRemovedHeading": "Your ticket has been removed",
