--- a/src/app/locale/en.json
+++ b/src/app/locale/en.json
@@ -16,7 +16,11 @@
   "service": {
     "subHeadingOne": "Welcome to Qmatic!",
     "accentBtnText": "Get in line",
+    "delayVisitBtnText": "Set call time",
+    "cancelBtnText": "Cancel",
+    "continueBtnText": "Continue",
     "selectService": "Please select a service at",
+    "selectDelay": "Please select a delay",
     "defaultTitle": "Mobile Ticket",
     "waiting": "Waiting",
     "noSelectedServices": "Please select a service"
@@ -24,6 +28,8 @@
   "ticketInfo": {
     "leaveVisitConfirmMsg": "Would you like to leave the line?",
     "btnTitleLeaveLine": "Leave the line",
+    "btnTitleChangeDelay": "Change call time",
+    "btnTitleArrive": "I'm here",
     "defaultTitle": "Mobile Ticket",
     "titleYourTurn": "It's your turn!",
     "ticketReady": "{firstName} is ready to serve you at",
@@ -33,6 +39,7 @@
     "ticketRemovedHeading": "Your ticket has been removed",
     "yourPosition": "You",
     "queueHeading": "Your place in line:",
+    "delayHeading": "Your call time delay expire:",
     "ticketEndHeading": "Thank you for visiting us!",
     "welcomeback": "Welcome back!",
     "visitRecycledMessage": "You will be called shortly",
